# upTrader

./: README.md  data.json  pyproject.toml
TreeMenu/: admin.py  apps.py  models.py  urls.py  views.py
TreeMenu/migrations/: 0001_initial.py  0002_treemenu_slug.py  0003_alter_treemenu_slug.py
TreeMenu/templates/TreeMenu/: draw_menu.html  index.html
TreeMenu/templatetags/: tree_menu_tags.py
settings/: settings.py  urls.py
